# Q-Attention

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: relation_real_smoke.json  retacred_debug_gpu.json  retacred_full_gpu.json  retacred_low_resource_gpu.json
docs/: collaboration_plan.md  collaborator_corrected_rerun_guide_zh.md  collaborator_experiment_and_submission_guide_zh.md  collaborator_git_workflow_zh.md  development_plan.md  experiment_protocol_v2_zh.md  experiment_runner_guide.md  innovation_ideas.md  nlp_task_plan.md  quantum_plugin_architecture_zh.md  quantum_projector_v3_protocol_zh.md  real_data_smoke_plan.md  retacred_collaborator_overview_zh.md  retacred_experiment_handoff.md  standalone_supervised_quantum_projector.md
examples/: encoder_adapter_demo.py  minimal_key_steering.py  quantum_projector_demo.py  relation_toy_test.jsonl  relation_toy_train.jsonl  relation_toy_valid.jsonl  routing_demo.py  spectral_filter_demo.py
experiments/: build_quantum_residual_ablation.py  build_relation_projector.py  build_relation_quantum_projector.py  build_relation_supervised_quantum_projector.py  build_retacred_from_tacred.py  eval_relation_quantum_plugins.py  eval_relation_routing.py  eval_relation_steering.py  prepare_relation_data.py  run_relation_seed_matrix.py  run_relation_smoke_pipeline.py  select_relation_steering_gain.py  summarize_relation_run.py  summarize_relation_seed_matrix.py  sweep_relation_spectral_filters.py  train_relation_baseline.py  train_relation_quantum_plugins.py
scripts/: export_retacred_report.py
tests/: test_phase1.py  (+14 more)
(+115 files in other folders)
