[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-attention"
version = "0.1.0"
description = "Quantum-enhanced spectral key steering for span-centric NLP information extraction"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
